@@ -3,7 +3,9 @@
 * minor bug fixes in interface
 * added on! to ConfigParser to specify override options
 * updates to use latest Lazydoc
-
+* added scrub to DelegateHash#to_hash, to remove keys
+  set to the default value
+  
 == 0.5.0 / 2009-05-25
 
 * fixed io validation to not duplicate IOs
